Feat: Solid Principle Unique Responsability
In this commit we separate the Swagger documtentation of controller
